parti deskto fini mais sans responsive

--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
     </head>
     <body>
 		<div class="containers_cv">
+			<img class="palmier_bot" src="./palmier_bas.png" alt="palmier_bot">
 			<div class="cv_recto">
-
+				<p class="name_sup"> Manon <br> Demazure</p>
+				<p class="name_inf1"> Manon </p>
+				<p class="name_inf2"> Demazure</p>
+				<div class="pic_info">
+					<img class="re_me" src="./mdemazur.jpg" alt="me">
+				</div>
+				<div class="rectangle">
+					<div class="contact_div">
+						<p class="contact">C O N T A C T</p>
+						<p class="p_contact"> <i class="fa fa-house"></i>236 rue d'houdain <br> 62620 Barlin</p>
+						<p class="p_contact"> <i class="fa fa-phone"></i>06 23 44 25 35</p>
+						<p class="p_contact"> <i class="fa fa-envelope"></i>manondmz26@gmail.com</p>
+					</div>
+				</div>
+				<p class="resum">Récemment sortie de l’école 42, je suis à la recherche d’une opportunité pour lancer ma
+					carrière professionnelle. Je suis prête à mettre en pratique mes compétences techniques et
+					ma créativité pour contribuer au succès de votre entreprise</p>
 			</div>
 			<div class="cv_verso">
 				<div class="presentation">
 						<div class="picture">
 							<div class="pink_circle"></div> 
-							<img src="mdemazur.jpg" alt="Image">
+							<img class="me" src="mdemazur.jpg" alt="Image">
 						</div> 
 						<div class="script">
 							<h1 class="myname">Manon Demazure</h1>
 							<h2 class="myjob">Développeuse Front-End</h2>
-							<p class="search"> Récemment sortie de l’école 42, je suis à la recherche d’une opportunité pour lancer ma
-								carrière professionnelle. Je suis prête à mettre en pratique mes compétences techniques et
-								ma créativité pour contribuer au succès de votre entreprise </p>
 						</div>
 					</div>
 					<div class="exp">
@@ -109,6 +123,7 @@
 						</p>
 					</div>
 			</div> 
+			<img class="palmier_top" src="./palmier_haut.png" alt="palmier">
 		</div>
     </body>
 </html>
