--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     </head>
     <body>
 		<div class="containers_cv">
-			<img class="palmier_bot" src="./palmier_bas.png" alt="palmier_bot">
+			<div class="first_palm">
+				<img class="palmier_bot" src="./palmier_bas.png" alt="palmier_bot">
+			</div>
 			<div class="cv_recto">
 				<p class="name_sup"> Manon <br> Demazure</p>
-				<p class="name_inf1"> Manon </p>
+				<p class="name_inf1"> Manon</p>
 				<p class="name_inf2"> Demazure</p>
-				<div class="pic_info">
-					<img class="re_me" src="./mdemazur.jpg" alt="me">
-				</div>
 				<div class="rectangle">
+					<img class="re_me" src="./mdemazur.jpg" alt="me">
 					<div class="contact_div">
 						<p class="contact">C O N T A C T</p>
 						<p class="p_contact"> <i class="fa fa-house"></i>236 rue d'houdain <br> 62620 Barlin</p>
@@ -26,55 +26,68 @@
 				</div>
 				<p class="resum">Récemment sortie de l’école 42, je suis à la recherche d’une opportunité pour lancer ma
 					carrière professionnelle. Je suis prête à mettre en pratique mes compétences techniques et
-					ma créativité pour contribuer au succès de votre entreprise</p>
+					ma créativité pour contribuer au succès de votre entreprise.</p>
 			</div>
 			<div class="cv_verso">
 				<div class="presentation">
-						<div class="picture">
-							<div class="pink_circle"></div> 
-							<img class="me" src="mdemazur.jpg" alt="Image">
-						</div> 
-						<div class="script">
-							<h1 class="myname">Manon Demazure</h1>
-							<h2 class="myjob">Développeuse Front-End</h2>
+					<div class="script">
+						<div class="pink_circle"></div> 
+						<img class="me" src="mdemazur.jpg" alt="Image">
+						<h1 class="myname">Manon Demazure</h1>
+						<h2 class="myjob">Développeuse Front-End</h2>
+					</div>
+				</div>
+				<div class="info_perso">
+					<hr class="pink_bar2">
+					<h3 class="title_part">COORDONNÉES</h3>
+					<p class="info"><i class="fa-solid fa-house"></i>  236 rue d'houdain <br>
+														62620, Barlin</p>
+					<p class="info"><i class="fa-solid fa-phone"></i>  06 23 44 25 35</p>
+					<p class="info"><i class="fa-solid fa-envelope"></i>  manondmz26@gmail.com</p>
+					<p class="info"><i class="fa-solid fa-cake-candles"></i>  26/01/2001</p>
+					<p class="info"><i class="fa-solid fa-car"></i>  Permis B - Véhiculée </p>
+					<hr class="pink_bar2">
+					<h3 class="title_part">COMPÉTENCES</h3>
+					<p class="skill_perso"> - Travailler en équipe <br><br>
+											- Faire preuve d'autonomie <br><br>
+											- Faire preuve de rigeur et de précision <br><br>
+											- Faire preuve de créativité <br><br>
+											- Faire preuve de persévérance 
+					</p>
+				</div>
+				<div class="exp">
+					<div class="formation_part">
+						<hr class="pink_bar1">
+						<h3 class="title_part">FORMATION</h3>
+						<p class="date">01/2021 - 05/2023</p>
+						<p class="school">École d'informatique</p>
+						<div class="align_job">
+							<p class="place_school">École 42</p>
+							<p class="place"> - Paris</p>
+						</div>
+						<p class="skill"> - C<br>- C++<br>- CSS<br>- React<br>- Typescript</p>
+						<p class="date">09/2019 - 06/2020</p>
+						<p class="school">1ère année de Licence informatique</p>
+						<div class="align_job">
+							<p class="place_school">Faculté Jean Perrin</p>
+							<p class="place"> - Lens</p>
+						</div>
+						<p class="date">06/2019</p>
+						<p class="school">Bac Scientifique</p>
+						<div class="align_job">
+							<p class="place_school">Lycée Louis Blaringhem</p>
+							<p class="place"> - Béthune</p>
+						</div>
+						<p class="date">06/2016</p>
+						<p class="school">Brevet - Mention Très Bien</p>
+						<div class="align_job">
+							<p class="place_school">Collège Jean Moulin</p>
+							<p class="place"> - Barlin</p>
 						</div>
 					</div>
-					<div class="exp">
-						<div class="formation_part">
-							<hr class="pink_bar1">
-							<h3 class="formation">FORMATION</h3>
-							<p class="date">01/2021 - 05/2023</p>
-							<p class="school">École d'informatique</p>
-							<div class="align_job">
-								<p class="place_school">École 42</p>
-								<p class="place"> - Paris</p>
-							</div>
-							<p class="skill"> - C<br>- C++<br>- CSS<br>- React<br>- Typescript</p>
-
-							<p class="date">09/2019 - 06/2020</p>
-							<p class="school">1ère année de Licence informatique</p>
-							<div class="align_job">
-								<p class="place_school">Faculté Jean Perrin</p>
-								<p class="place"> - Lens</p>
-							</div>
-
-							<p class="date">06/2019</p>
-							<p class="school">Bac Scientifique</p>
-							<div class="align_job">
-								<p class="place_school">Lycée Louis Blaringhem</p>
-								<p class="place"> - Béthune</p>
-							</div>
-
-							<p class="date">06/2016</p>
-							<p class="school">Brevet - Mention Très Bien</p>
-							<div class="align_job">
-								<p class="place_school">Collège Jean Moulin</p>
-								<p class="place"> - Barlin</p>
-							</div>
-						</div>
 						<div class="career">
 							<hr class="pink_bar1">
-							<h3 class="formation">PARCOURS PROFESSIONNEL</h3>
+							<h3 class="title_part">PARCOURS PROFESSIONNEL</h3>
 							<p class="date">08/2021 - 07/2023</p>
 							<p class="job">Hôtesse de caisse</p>
 							<div class="align_job">
@@ -104,26 +117,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="info_perso">
-						<hr class="pink_bar2">
-						<h3 class="formation">COORDONNÉES</h3>
-						<p class="info"><i class="fa-solid fa-house"></i>  236 rue d'houdain <br>
-															62620, Barlin</p>
-						<p class="info"><i class="fa-solid fa-phone"></i>  06 23 44 25 35</p>
-						<p class="info"><i class="fa-solid fa-envelope"></i>  manondmz26@gmail.com</p>
-						<p class="info"><i class="fa-solid fa-cake-candles"></i>  26/01/2001</p>
-						<p class="info"><i class="fa-solid fa-car"></i>  Permis B - Véhiculée </p>
-						<hr class="pink_bar2">
-						<h3 class="formation">COMPÉTENCES</h3>
-						<p class="skill_perso"> - Travailler en équipe <br><br>
-												- Faire preuve d'autonomie <br><br>
-												- Faire preuve de rigeur et de précision <br><br>
-												- Faire preuve de créativité <br><br>
-												- Faire preuve de persévérance 
-						</p>
-					</div>
 			</div> 
-			<img class="palmier_top" src="./palmier_haut.png" alt="palmier">
+			<div class="second_palm">
+				<img class="palmier_top" src="./palmier_haut.png" alt="palmier">
+			</div>
 		</div>
     </body>
 </html>
