--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>cv</title>
-		<link href="cv.css" rel="stylesheet">
+		<link href="style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     </head>
     <body>
 		<div class="containers_cv">
 			<div class="first_palm">
-				<img class="palmier_bot" src="./palmier_bas.png" alt="palmier_bot">
+				<img class="palmier_bot" src="./A7/palmier_bas.png" alt="palmier_bot">
 			</div>
 			<div class="cv_recto">
 				<p class="name_sup"> Manon <br> Demazure</p>
 				<p class="name_inf1"> Manon</p>
 				<p class="name_inf2"> Demazure</p>
 				<div class="rectangle">
-					<img class="re_me" src="./mdemazur.jpg" alt="me">
+					<img class="re_me" src="./A7/mdemazur.jpg" alt="me">
 					<div class="contact_div">
 						<p class="contact">C O N T A C T</p>
 						<p class="p_contact"> <i class="fa fa-house"></i>236 rue d'houdain <br> 62620 Barlin</p>
@@ -32,13 +32,13 @@
 				<div class="presentation">
 					<div class="script">
 						<div class="pink_circle"></div> 
-						<img class="me" src="mdemazur.jpg" alt="Image">
+						<img class="me" src="./A7/mdemazur.jpg" alt="Image">
 						<h1 class="myname">Manon Demazure</h1>
 						<h2 class="myjob">Développeuse Front-End</h2>
 					</div>
 				</div>
 				<div class="info_perso">
-					<hr class="pink_bar2">
+					<hr class="pink_bar">
 					<h3 class="title_part">COORDONNÉES</h3>
 					<p class="info"><i class="fa-solid fa-house"></i>  236 rue d'houdain <br>
 														62620, Barlin</p>
@@ -46,7 +46,7 @@
 					<p class="info"><i class="fa-solid fa-envelope"></i>  manondmz26@gmail.com</p>
 					<p class="info"><i class="fa-solid fa-cake-candles"></i>  26/01/2001</p>
 					<p class="info"><i class="fa-solid fa-car"></i>  Permis B - Véhiculée </p>
-					<hr class="pink_bar2">
+					<hr class="pink_bar">
 					<h3 class="title_part">COMPÉTENCES</h3>
 					<p class="skill_perso"> - Travailler en équipe <br><br>
 											- Faire preuve d'autonomie <br><br>
@@ -57,7 +57,7 @@
 				</div>
 				<div class="exp">
 					<div class="formation_part">
-						<hr class="pink_bar1">
+						<hr class="pink_bar">
 						<h3 class="title_part">FORMATION</h3>
 						<p class="date">01/2021 - 05/2023</p>
 						<p class="school">École d'informatique</p>
@@ -86,7 +86,7 @@
 						</div>
 					</div>
 						<div class="career">
-							<hr class="pink_bar1">
+							<hr class="pink_bar">
 							<h3 class="title_part">PARCOURS PROFESSIONNEL</h3>
 							<p class="date">08/2021 - 07/2023</p>
 							<p class="job">Hôtesse de caisse</p>
@@ -119,7 +119,7 @@
 					</div>
 			</div> 
 			<div class="second_palm">
-				<img class="palmier_top" src="./palmier_haut.png" alt="palmier">
+				<img class="palmier_top" src="./A7/palmier_haut.png" alt="palmier">
 			</div>
 		</div>
     </body>
