responsive partout, js un peu bancal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>cv</title>
 		<link href="style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+		<script src="script.js"></script>
     </head>
     <body>
 		<div class="containers_cv">
@@ -122,14 +123,6 @@
 				<img class="palmier_top" src="./A7/palmier_haut.png" alt="palmier">
 			</div>
 		</div>
-	<!-- <script>
-			const cv_recto = document.getElementById('cv_recto');
-			const cv_verso = document.getElementById('cv_verso');
 
-			cv_recto.addEventListener('click', () => {
-				cv_recto.style.transform = 'rotateY(180deg)'
-				cv_verso.style.transform = 'rotateY(0deg)' 
-				[cv_recto, cv_verso] = [cv_verso, cv_recto]});
-		</script> -->
     </body>
 </html>
