--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="first_palm">
 				<img class="palmier_bot" src="./A7/palmier_bas.png" alt="palmier_bot">
 			</div>
-			<div class="cv_recto" id="cv_recto">
+			<div class="cv_recto active" id="cv_recto">
 				<p class="name_sup"> Manon <br> Demazure</p>
 				<p class="name_inf1"> Manon</p>
 				<p class="name_inf2"> Demazure</p>
